pbc_contract_codegen/tests/action/fail/single_argument.stderr
error: custom attribute panicked
 --> tests/action/fail/single_argument.rs:4:1
  |
4 | #[action]
  | ^^^^^^^^^
  |
  = help: message: Functions annotated with this macro must have at least 2 arguments, but had only 1
